@@ -236,6 +236,8 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       silence others.
     - x2goserver/lib/x2goupdateoptionsstring: fix some Perl Critic warnings
       and silence others.
+    - X2Go/Server/Agent/NX/Options.pm: grammar/typo fix in comment and improve
+      a different comment.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
